# chronos-discord-bot

./: Cargo.toml  Dockerfile  flake.nix
src/: commands.rs  data.rs  event_handler.rs  fs.rs  main.rs  time.rs
src/commands/: bot.rs  setup.rs  time.rs
src/event_handler/: message.rs  ready.rs
src/event_handler/message/: helpful_messages.rs  regex_matching.rs
src/strings/: errors.rs  filenames.rs  mod.rs
src/structs/: data.rs  mod.rs  regex_time.rs  user_data.rs
