[package]
name = "chronos-discord-bot"
version = "0.1.0-alpha"
edition = "2024"

[dependencies]
chrono = "0.4.42"
chrono-tz = { version = "0.10.4", features = ["serde"]}
regex = "1.12.2"
serde = "1.0.228"
serde_json = "1.0.145"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"

[dependencies.poise]
version = "0.6.1"
features = []

[dependencies.tokio]
version = "1.48.0"
features = ["macros", "rt-multi-thread"]
